Version 0.4 (2013-??-??):
 - Support for tracking depending files in SCSS/SASS and LESS files
 - Support for content-based file names
 - Support for libsass based in-process scss processing
 - Support for eco templates
 - Also write statically precompressed files for use with MultiViews
   in Apache or gzip_static in nginx
 - Support for inline-content-tags
 - Treat typeless script tags as JS instead of ignoring the tag
 - Errors while processing files are only written to the output.
   No more smarty errors are triggered.
 - Require PHP 5.3

Version 0.3.1 (2012-04-26):
 - Restore 5.2 compatibility (thanks @snaxor)

This is going to be the last version of sacy compatible
with PHP 5.2 (which is out of support by now)

Version 0.3 (2012-02-11):
 - Stop blowing up if there is nothing to do (issue #5)
 - Use debug mode as part of the generated hash
 - Translate CSS url()'s with debug_mode = 3
 - Patch phamlp to correctly support @import
 - Support for external tools for transforming/minimizing
 - Support for uglyfier.js
 - Support for the official sass compiler
 - Support for the official less compiler (requires git HEAD)
 - Improved error handling
 - Support for setting global config-defaults
 - Support for compiling coffee script
 - Support for writing a compressed phar archive
 - Support to specify an output directory for build.php

Version 0.2 (2011-02-16):
 - Support for bundling as a phar archive (requires PHP 5.3)
 - Support for bundling lessphp and Phamlp
 - Support for transforming less files before compression
 - Support for transforming sass and scss files before compression
 - New debug mode (3) to only do transforms (useful for development)
 - Removes whitespace surrounding replaced tags
 - Now treating intermixed JS and CSS as separate entities

Version 0.1 (2009-09-17):
 - initial public release